# fproject

./: .gitignore  Dockerfile  alembic.ini  app.db  docker-compose.yml  logger.py  main.py  pyproject.toml  redis.conf  requirements.txt
config/: consts.py  settings.py
migrations/: env.py
migrations/versions/: 2ba94597b6f9_first.py  8c9480664550_user_password.py  fd0f53e8e28d_del_max_length.py
src/: auth.py  base.py  cache.py  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py  utils.py
src/api/api_v1/: api.py
src/api/api_v1/common/: common.py
src/api/api_v1/user/: user.py
src/clients/telegram/: base.py  test1.py  test2.py
src/clients/telegram/handlers/: questions.py
src/clients/weather/: client.py  exceptions.py  schemas.py
src/models/: user.py
src/schemas_common/: user.py
src/services/: datetime_manager.py
src/tasks/: celery.py
src/tests/: conftest.py  test_item.py
src/tests/fixtures/: api_client.py  db.py
volumes/redis/: dump.rdb
