[tool.poetry]
name = "fproject"
version = "0.1.0"
description = ""
authors = ["Nicolai94 <nicolas9441@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
humps = "^0.2.2"
black = "^23.9.0"
celery = "^5.3.4"
flower = "^2.0.1"
pytest = "^7.4.2"
redis = "^5.0.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
