[tool.poetry]
name = "fproject"
version = "0.1.0"
description = ""
authors = ["Nicolai94 <nicolas9441@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
humps = "^0.2.2"
black = "^23.9.0"
celery = "^5.3.4"
flower = "^2.0.1"
pytest = "^7.4.2"
redis = "^5.0.0"
psycopg2-binary = "^2.9.7"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"
structlog = "^23.1.0"
aiogram = "^3.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
